# sophia_keyboard_sender

./: Cargo.toml  README.en.md  README.md
scripts/: README.md
src/: error.rs  lib.rs  types.rs
src/convenience/: mod.rs  shortcuts.rs
src/core/: global.rs  mod.rs  window_target.rs
src/parser/: command.rs  duration.rs  mod.rs
src/smart/: implementation.rs  mod.rs
