[package]
name = "sophia_keyboard_sender"
version = "0.3.0"
edition = "2021"
description = "Keyboard sender with window targeting, delay control, and command parsing"
authors = ["YeMiancheng <ymc.github@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ymc-github/sophia_keyboard_sender"
readme = "README.md"
documentation = "https://docs.rs/sophia_keyboard_sender"

[features]
default = ["global", "command_parser"]
global = ["dep:windows"]
window_target = ["global"]
command_parser = ["global", "dep:regex", "dep:lazy_static"]
smart = ["global", "command_parser"]
full = ["global", "window_target", "command_parser", "smart"]

[dependencies]
keyboard-codes = { version = "0.3.0", features = ["serde", "phf"] }
# keyboard-codes = { git = "https://github.com/ymc-github/keyboard-codes", branch = "main" }
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
], optional = true }
thiserror = "1.0"
lazy_static = { version = "1.4", optional = true }
regex = { version = "1.0", optional = true }
sleep-utils = "0.2.0"
# sleep-utils = { git = "https://github.com/ymc-github/sleep-utils", branch = "main" }

[package.metadata.docs.rs]
all-features = true